company_id, stock_trade_time이 일치하는 데이터는 db에 저장하지 않도록 수정